minor fix to Makefile removed NNLOPS/common/pwhg_math.h (identical to the one in main powheg) NNLOPS/common/cs_angles.f: added some functions that were previously in pwhg_analysis-wrapper-WW.f
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3572 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/WWJ/Makefile
+++ b/WWJ/Makefile
@@ -62,7 +62,7 @@ GOSAMLIBS+=$(shell cd $(GOSAMDIR) ; echo *.cc *.F90 ' ' | sed 's/.cc /.o /g ; s/
 
 PWD=$(shell pwd)
 WDNAME=$(shell basename $(PWD))
-VPATH= rwgt-patches/:NNLOPS/pwhg-patches/:NNLOPS/common:./:../:$(OBJDIR):./$(GOSAMDIR)/
+VPATH= NNLOPS/pwhg-patches/:NNLOPS/common:./:../:$(OBJDIR):./$(GOSAMDIR)/
 
 INCLUDE1=$(PWD)
 INCLUDE2=$(shell dirname $(PWD))/include
