Fix to Makefile for stamping output with svn versions
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3674 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/Zj/ZjMiNNLO/Makefile
+++ b/Zj/ZjMiNNLO/Makefile
@@ -291,7 +291,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o  		\
 #MADLIBS=libdhelas3.a libmadgraph.a libmodel.a
 
 # Get SVN info for SVN version stamping code
-$(shell ../svnversion/svnversion.sh>/dev/null)
+$(shell $(V2DIR)/svnversion/svnversion.sh $(PWD) $(Zj) $(V2DIR) >/dev/null)
 
 
 
