Upgrade of the enhancedradfac feature of directphoton so that it can be used with the rwl_ type reweighting.
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3722 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/directphoton/Makefile
+++ b/directphoton/Makefile
@@ -70,11 +70,12 @@ endif
 
 
 ## LoopTools
-LT=PathToLoopTools
+LT=$(HOME)/tomasjezo/tools/LoopTools/2.15
+#LT=PathToLoopTools
 LTFLAGS=-I$(LT)/include -L$(LT)/lib64 -looptools
 LIBS+= -L$(LT)/lib64 -looptools
 
-FF=$(F77) $(FFLAGS) $(FPE) $(OPT) $(DEBUG) -I$(INCLUDE0) -I$(INCLUDE1) -I$(INCLUDE2) $(LTFLAGS)
+FF=$(F77) $(FFLAGS) $(FPE) $(OPT) $(DEBUG) -I$(INCLUDE0) -I$(INCLUDE2) $(LTFLAGS)
 
 
 INCLUDE =$(wildcard ../include/*.h *.h include/*.h)
