fine tune to the makefile
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3725 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/directphoton/Makefile
+++ b/directphoton/Makefile
@@ -70,8 +70,7 @@ endif
 
 
 ## LoopTools
-LT=$(HOME)/tomasjezo/tools/LoopTools/2.15
-#LT=PathToLoopTools
+LT=PathToLoopTools
 LTFLAGS=-I$(LT)/include -L$(LT)/lib64 -looptools
 LIBS+= -L$(LT)/lib64 -looptools
 
