added option for as from lhapdf and compiler option for native pdfs
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3749 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/Z_ew-BMNNPV/Makefile
+++ b/Z_ew-BMNNPV/Makefile
@@ -16,7 +16,7 @@ ANALYSIS=report
 #STATIC= -static
 #
 ifeq ("$(COMPILER)","gfortran")
-F77= $(COMPILER) -fno-automatic  -ffixed-line-length-none
+F77= $(COMPILER) -fno-automatic  -ffixed-line-length-none -std=legacy
 #FPE=-ffpe-trap=invalid,zero,overflow,underflow -finit-real=nan
 # -finit-real=nan
 ## -fbounds-check sometimes causes a weird error due to non-lazy evaluation
