removed equivalence tables, since now everything is hardcoded in the POWHEG BOx V2 code
Fixed dependence in the Makefile



git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3782 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/X0jj/Makefile
+++ b/X0jj/Makefile
@@ -77,7 +77,8 @@ INCLUDE2=$(BOX)/include
 INCLUDE3=SubProcesses/
 FF=$(F77) $(FFLAGS) $(FPE) $(OPT) $(DEBUG) -I$(INCLUDE0) -I$(INCLUDE1) -I$(INCLUDE2) -I$(INCLUDE3)
 
-INCLUDE =$(wildcard ../include/*.h *.h include/*.h)
+#INCLUDE =$(wildcard ../include/*.h *.h include/*.h)
+INCLUDE =$(wildcard $(INCLUDE2)/*.h *.h $(INCLUDE1)/*.h $(INCLUDE1)/*.f)
 
 ifeq ("$(PDF)","lhapdf")
 LHAPDF_CONFIG=lhapdf-config
